# SpaceFlight-GBJam11

./: .gitignore  .gitmodules  CMakeLists.txt  GRAPHICS_LIB_README.md  README.md
example/: CMakeLists.txt  app.cpp  app.h  main.cpp  minimum.cpp
game/: CMakeLists.txt  collision.h  controls.cpp  controls.h  game.cpp  game.h  gb_consts.h  logs.cpp  logs.h  main.cpp  menu.cpp  menu.h  palette.cpp  palette.h  ship-modules.cpp  ship-modules.h  ship.cpp  ship.h  ship_menu.cpp  ship_menu.h  ship_modules.cpp  ship_modules.h  system.cpp  system.h  system_consts.h
include/: manager.h
libs/: CMakeLists.txt
libs/GameHelper/: CMakeLists.txt
libs/GameHelper/demo/: CMakeLists.txt  demo.cpp  input_demo.cpp  input_demo.h  timer_demo.cpp  timer_demo.h
libs/GameHelper/include/GameHelper/: camera.h  controller.h  input.h  keyboard.h  mouse.h  random.h  timer.h
libs/GameHelper/src/: CMakeLists.txt  camera.cpp  controller.cpp  keyboard.cpp  mouse.cpp  random.cpp
libs/Graphics/src/: CMakeLists.txt  render.cpp  render.h
resources/buildscripts/linux/: debug.sh  debugOpenGL.sh  debugVulkan.sh  release.sh  releaseOpenGL.sh  releaseVulkan.sh
resources/buildscripts/windows/: debug.bat  debugOpenGL.bat  debugVulkan.bat  release.bat  releaseOpenGL.bat  releaseVulkan.bat
resources/models/: README.md  ROOM.fbx  coloured_cube_test.fbx  log.blend  log.blend1  log.mtl  monkey.fbx  monkey.glb  planet.blend  planet.blend1  planet.mtl  stars.blend  stars.blend1  stars.mtl  wolf.dae  wolf.fbx
resources/scripts/: run.sh
resources/shaders/opengl/: 3D-lighting-anim.vert  3D-lighting.vert  blinnphong.frag  final.frag  final.vert  flat.frag
resources/shaders/vulkan/: 3D-lighting-anim.vert  3D-lighting-anim.vert.spv  3D-lighting.vert  3D-lighting.vert.spv  blinnphong.frag  blinnphong.frag.spv  cmpShader.bat  cmpShader.sh  final.frag  final.frag.spv  final.vert  final.vert.spv  flat.frag  flat.frag.spv  flat.vert  flat.vert.spv
resources/textures/: menu.aseprite  test.aseprite
resources/textures/palettes/: gen_palettes_list.sh  palettes.txt
resources/textures/ship/: aim.aseprite  criticaldmg.aseprite  dial.aseprite  ebrake.aseprite  glass.aseprite  message.aseprite  target-dist-dial.aseprite  target-dist.aseprite  target-offscreen.aseprite  target-onscreen.aseprite  throttle.aseprite
resources/textures/ship/menu/: bg.aseprite
src/: CMakeLists.txt  manager.cpp
